tests/fixtures/invalid/int_3_args.py
# int() takes at most 1 argument, got 3
x = int(1, 1, 1)
